--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,18 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+<!--		&lt;!&ndash; slf4j-log4j &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>org.slf4j</groupId>-->
+<!--			<artifactId>slf4j-log4j12</artifactId>-->
+<!--			<version>1.6.1</version>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -56,13 +63,17 @@
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-annotations</artifactId>
     </dependency>
-	
-		
-		<dependency>
-    <groupId>org.hibernate</groupId>
-    <artifactId>hibernate-validator</artifactId>
-    <version>6.1.0.Final</version>
-</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>org.hibernate</groupId>-->
+<!--			<artifactId>hibernate-core</artifactId>-->
+<!--			<version> 5.2.1.Final</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--    <groupId>org.hibernate</groupId>-->
+<!--    <artifactId>hibernate-validator</artifactId>-->
+<!--    <version>6.1.0.Final</version>-->
+<!--</dependency>-->
 		
 		
 				<!-- https://mvnrepository.com/artifact/junit/junit -->
